Update Motion tablet view and correct Collapse and Navigation.

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -22,11 +22,13 @@
 .logo-lg div p:nth-child(2) {
  	font-size: 30px;
  	color: white;
- 	padding: 0 0 15px 0;
+ 	padding: 0 0 4px 0;
 }
 
-.logo-lg div h1 {
- 	font-size: 18px;
+.logo-lg div h1 > small {
+ 	font-size: 16px;
  	color: white;
  	font-weight: 400;
+ 	display: block;
+ 	padding: 0 0 3px 0;
 }
