--- a/src/containers/Navigation/Navigation.css
+++ b/src/containers/Navigation/Navigation.css
@@ -1,5 +1,5 @@
 nav {
-	z-index: 10;
+	z-index: 30;
 }
 
 @media screen and (max-width: 900px) {
