--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5, h6, b, span, strong, p, a, small, li, form, textarea, input,
 }
 
 p {
-    padding: 0 0 5px 0;
+    padding: 0 0 3px 0;
 }
 
 h1 {
